# alz

./: CMakeLists.txt  README  clean_cmake.sh
sample/: test_1.txt
src/: CMakeLists.txt  bit_stream.cc  bit_stream.h  bit_stream_test.cc  constants.h  decode_main.cc  decoder.cc  decoder.h  decoder_test.cc  encode_main.cc  encoder.cc  encoder.h  encoder_test.cc  file_io.cc  file_io.h  file_io_test.cc  memmem_opt.h  sink_source.cc  sink_source.h  util.h
